added turn functionality for maze challenge

--- a/challenge.html
+++ b/challenge.html
@@ -10,14 +10,18 @@
   <div id="playing-area" class="page-wrapper"></div>
 
   <div id="coding-area">
-    <button value="0" class="movement-buttons">Up</button>
-    <button value="1" class="movement-buttons">Right</button>
-    <button value="2" class="movement-buttons">Down</button>
+    <button value="0" class="movement-buttons" style="margin-left: 5em">Up</button>
+    <br />
     <button value="3" class="movement-buttons">Left</button>
+    <button value="2" class="movement-buttons">Down</button>
+    <button value="1" class="movement-buttons">Right</button>
+    <div id="move-list">Move List: </div>
+    <button id="start-button">Start</button>
   </div>
   
   <script src="scripts/player.js" ></script>  
   <script src="scripts/canvas.js" ></script>
+  <script src="scripts/maze.js" ></script>
   <script src="scripts/main.js" ></script>
 </body>
 </html>
