added undo functionality

--- a/challenge.html
+++ b/challenge.html
@@ -14,6 +14,7 @@
     <button value="1" class="movement-buttons">Move Forward</button>
     <button value="2" class="movement-buttons">Turn Clockwise</button>
     <div id="move-list">Move List: </div>
+    <button id="undo-button">Undo Move</button>
     <button id="start-button">Start</button>
   </div>
   
