--- a/challenge.html
+++ b/challenge.html
@@ -5,17 +5,20 @@
   <title>Coding Game</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/more.css">
 </head>
 <body>
-  <div id="playing-area" class="page-wrapper"></div>
+  <div class="page-wrapper flex-container">
+    <div id="playing-area"></div>
 
-  <div id="coding-area">
-    <button value="0" class="movement-buttons">Turn Counterclockwise</button>
-    <button value="1" class="movement-buttons">Move Forward</button>
-    <button value="2" class="movement-buttons">Turn Clockwise</button>
-    <div id="move-list">Move List: </div>
-    <button id="undo-button">Undo Move</button>
-    <button id="start-button">Start</button>
+    <div id="coding-area">
+      <button value="0" class="movement-buttons">Turn Left</button>
+      <button value="1" class="movement-buttons">Move Forward</button>
+      <button value="2" class="movement-buttons">Turn Right</button>
+      <div id="move-list">Move List: </div>
+      <button id="undo-button">Undo Move</button>
+      <button id="start-button">Start</button>
+    </div>
   </div>
   
   <script src="scripts/player.js" ></script>
