implemented routing and applied frontend css

--- a/challenge.html
+++ b/challenge.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <title>Coding Game</title>
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="css/more.css">
+  <link rel="stylesheet" type="text/css" href="public/css/style.css">
+  <link rel="stylesheet" type="text/css" href="public/css/more.css">
 </head>
 <body>
   <div class="page-wrapper flex-container">
@@ -20,10 +20,10 @@
       <button id="start-button">Start</button>
     </div>
   </div>
-  
-  <script src="scripts/player.js" ></script>
-  <script src="scripts/canvas.js" ></script>
-  <script src="scripts/maze.js" ></script>
-  <script src="scripts/main.js" ></script>
+
+  <script src="public/scripts/player.js" ></script>
+  <script src="public/scripts/canvas.js" ></script>
+  <script src="public/scripts/maze.js" ></script>
+  <script src="public/scripts/main.js" ></script>
 </body>
 </html>
