--- a/challenge.html
+++ b/challenge.html
@@ -24,6 +24,6 @@
   <script src="scripts/player.js" ></script>
   <script src="scripts/canvas.js" ></script>
   <script src="scripts/maze.js" ></script>
-  <script src="scripts/main.js" ></script>
+  <script src="scripts/maze-main.js" ></script>
 </body>
 </html>
